[package]
name = "virt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
handlebars = "4.5.0"
ipnet = { version = "2.9.0", features = ["serde"] }
pnet = { version = "0.34.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
virt = { version = "0.3.1", features = ["bindgen_regenerate", "qemu"] }
