[package]
name = "virt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
futures = "0.3.29"
handlebars = "4.5.0"
ipnet = { version = "2.9.0", features = ["serde"] }
pnet = { version = "0.34.0", features = ["serde"] }
rand = "0.8.5"
rtnetlink = "0.13.1"
serde = { version = "1.0.193", features = ["derive", "serde_derive", "rc"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["macros", "net", "rt-multi-thread", "rt", "sync", "time"] }
virt = { version = "0.3.1", features = ["bindgen_regenerate", "qemu"] }
virt-sys = { version = "0.2.0", features = ["bindgen", "bindgen_regenerate", "qemu"] }
netlink-packet-route = { version = "0.17.1", features = ["rich_nlas"] }
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["serde", "std"] }
lxc = { git = "https://github.com/sanpii/lxc-rs.git"}